Added the datasets and required files

--- a/model1.ipynb
+++ b/model1.ipynb
@@ -1,6 +1,414 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f2fc3a3e-cc04-405a-85b5-3a7f4f017efc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from imblearn.over_sampling import SMOTE, ADASYN\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, roc_auc_score\n",
+    "from sklearn.linear_model import LogisticRegression, LinearRegression\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.tree import DecisionTreeClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2c26b9c8-a854-43f2-8dcf-f9c22292d2f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('Datasets/hospital_readmissions_30k.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f93b9546-3721-4934-a748-634686b9c947",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>blood_pressure</th>\n",
+       "      <th>cholesterol</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>diabetes</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>medication_count</th>\n",
+       "      <th>length_of_stay</th>\n",
+       "      <th>discharge_destination</th>\n",
+       "      <th>readmitted_30_days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>74</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>130/72</td>\n",
+       "      <td>240</td>\n",
+       "      <td>31.5</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nursing_Facility</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>46</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>120/92</td>\n",
+       "      <td>292</td>\n",
+       "      <td>36.3</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Nursing_Facility</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>89</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>135/78</td>\n",
+       "      <td>153</td>\n",
+       "      <td>30.3</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>84</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>123/80</td>\n",
+       "      <td>153</td>\n",
+       "      <td>31.5</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>135/84</td>\n",
+       "      <td>205</td>\n",
+       "      <td>18.4</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Nursing_Facility</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29995</th>\n",
+       "      <td>29996</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>112/80</td>\n",
+       "      <td>157</td>\n",
+       "      <td>31.4</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29996</th>\n",
+       "      <td>29997</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>146/83</td>\n",
+       "      <td>198</td>\n",
+       "      <td>30.2</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29997</th>\n",
+       "      <td>29998</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>131/96</td>\n",
+       "      <td>275</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29998</th>\n",
+       "      <td>29999</td>\n",
+       "      <td>61</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>124/75</td>\n",
+       "      <td>232</td>\n",
+       "      <td>34.3</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29999</th>\n",
+       "      <td>30000</td>\n",
+       "      <td>78</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>148/77</td>\n",
+       "      <td>240</td>\n",
+       "      <td>35.5</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>30000 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       patient_id  age  ... discharge_destination readmitted_30_days\n",
+       "0               1   74  ...      Nursing_Facility                Yes\n",
+       "1               2   46  ...      Nursing_Facility                 No\n",
+       "2               3   89  ...                  Home                 No\n",
+       "3               4   84  ...                  Home                 No\n",
+       "4               5   32  ...      Nursing_Facility                 No\n",
+       "...           ...  ...  ...                   ...                ...\n",
+       "29995       29996   29  ...                  Home                Yes\n",
+       "29996       29997   20  ...                  Home                Yes\n",
+       "29997       29998   40  ...                  Home                 No\n",
+       "29998       29999   61  ...                  Home                 No\n",
+       "29999       30000   78  ...                  Home                 No\n",
+       "\n",
+       "[30000 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1eed028f-28e2-4ad1-b8cb-d5bc25bca984",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['patient_id', 'age', 'gender', 'blood_pressure', 'cholesterol', 'bmi',\n",
+       "       'diabetes', 'hypertension', 'medication_count', 'length_of_stay',\n",
+       "       'discharge_destination', 'readmitted_30_days'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "74c182d1-af48-4532-b60b-5ce8e8e89b00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "patient_id                 int64\n",
+       "age                        int64\n",
+       "gender                    object\n",
+       "blood_pressure            object\n",
+       "cholesterol                int64\n",
+       "bmi                      float64\n",
+       "diabetes                  object\n",
+       "hypertension              object\n",
+       "medication_count           int64\n",
+       "length_of_stay             int64\n",
+       "discharge_destination     object\n",
+       "readmitted_30_days        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ab232477-02db-46a0-9157-2444d3224383",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "patient_id               0\n",
+       "age                      0\n",
+       "gender                   0\n",
+       "blood_pressure           0\n",
+       "cholesterol              0\n",
+       "bmi                      0\n",
+       "diabetes                 0\n",
+       "hypertension             0\n",
+       "medication_count         0\n",
+       "length_of_stay           0\n",
+       "discharge_destination    0\n",
+       "readmitted_30_days       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "350dc16d-12a6-4059-87e0-d60ebacf5941",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'Other'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m correlate = \u001b[43mdata\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcorr\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m sns.heatmap(correlate, cmap=\u001b[33m'\u001b[39m\u001b[33mcoolwarm\u001b[39m\u001b[33m'\u001b[39m, linewidths=\u001b[32m3\u001b[39m, annot=\u001b[38;5;28;01mTrue\u001b[39;00m, square=\u001b[38;5;28;01mTrue\u001b[39;00m, fmt=\u001b[33m'\u001b[39m\u001b[33m.2f\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Hospital-Readmission-Prediction-and-Analysis/.venv/lib/python3.12/site-packages/pandas/core/frame.py:11056\u001b[39m, in \u001b[36mDataFrame.corr\u001b[39m\u001b[34m(self, method, min_periods, numeric_only)\u001b[39m\n\u001b[32m  11054\u001b[39m cols = data.columns\n\u001b[32m  11055\u001b[39m idx = cols.copy()\n\u001b[32m> \u001b[39m\u001b[32m11056\u001b[39m mat = \u001b[43mdata\u001b[49m\u001b[43m.\u001b[49m\u001b[43mto_numpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mna_value\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mnan\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m  11058\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m method == \u001b[33m\"\u001b[39m\u001b[33mpearson\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m  11059\u001b[39m     correl = libalgos.nancorr(mat, minp=min_periods)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Hospital-Readmission-Prediction-and-Analysis/.venv/lib/python3.12/site-packages/pandas/core/frame.py:1998\u001b[39m, in \u001b[36mDataFrame.to_numpy\u001b[39m\u001b[34m(self, dtype, copy, na_value)\u001b[39m\n\u001b[32m   1996\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   1997\u001b[39m     dtype = np.dtype(dtype)\n\u001b[32m-> \u001b[39m\u001b[32m1998\u001b[39m result = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_mgr\u001b[49m\u001b[43m.\u001b[49m\u001b[43mas_array\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mna_value\u001b[49m\u001b[43m=\u001b[49m\u001b[43mna_value\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1999\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m result.dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m dtype:\n\u001b[32m   2000\u001b[39m     result = np.asarray(result, dtype=dtype)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Hospital-Readmission-Prediction-and-Analysis/.venv/lib/python3.12/site-packages/pandas/core/internals/managers.py:1694\u001b[39m, in \u001b[36mBlockManager.as_array\u001b[39m\u001b[34m(self, dtype, copy, na_value)\u001b[39m\n\u001b[32m   1692\u001b[39m         arr.flags.writeable = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m   1693\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1694\u001b[39m     arr = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_interleave\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mna_value\u001b[49m\u001b[43m=\u001b[49m\u001b[43mna_value\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1695\u001b[39m     \u001b[38;5;66;03m# The underlying data was copied within _interleave, so no need\u001b[39;00m\n\u001b[32m   1696\u001b[39m     \u001b[38;5;66;03m# to further copy if copy=True or setting na_value\u001b[39;00m\n\u001b[32m   1698\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m na_value \u001b[38;5;129;01mis\u001b[39;00m lib.no_default:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Hospital-Readmission-Prediction-and-Analysis/.venv/lib/python3.12/site-packages/pandas/core/internals/managers.py:1753\u001b[39m, in \u001b[36mBlockManager._interleave\u001b[39m\u001b[34m(self, dtype, na_value)\u001b[39m\n\u001b[32m   1751\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   1752\u001b[39m         arr = blk.get_values(dtype)\n\u001b[32m-> \u001b[39m\u001b[32m1753\u001b[39m     \u001b[43mresult\u001b[49m\u001b[43m[\u001b[49m\u001b[43mrl\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m]\u001b[49m = arr\n\u001b[32m   1754\u001b[39m     itemmask[rl.indexer] = \u001b[32m1\u001b[39m\n\u001b[32m   1756\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m itemmask.all():\n",
+      "\u001b[31mValueError\u001b[39m: could not convert string to float: 'Other'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8b8e2dd-82e1-4dbd-a4b2-b952a5b16cae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
